styles/team-deets.css
body {
    font-family: "Roboto", serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    margin: 0;
    padding: 0;
    overflow-x: hidden;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background: linear-gradient(300deg, #9e9e9f, #402E7a, #e8e7e9);

}

.gradient-background {
    background: linear-gradient(300deg, #00bfff, #254336, #402E7A);
    background-size: 180% 180%;
    animation: gradient-animation 18s ease infinite;
}

.gradient-background2 {
    background: linear-gradient(300deg, #00bfff, #4070f4, #402E7A);
    background-size: 180% 180%;
    animation: gradient-animation 18s ease infinite;
}

 .gradient-background3 {
    background: linear-gradient(300deg, #A0937D, #ECB176, #FED8B1);
    background-size: 180% 180%;
    animation: gradient-animation 18s ease infinite;
} 

@keyframes gradient-animation {
    0% {
        background-position: 0% 50%;
    }

    50% {
        background-position: 100% 50%;
    }

    100% {
        background-position: 0% 50%;
    }
}

.slider {
    width: 100%;
    height: 100%;
    max-width: 1200px;
    position: relative;
}

.slide {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    gap: 20px;
    padding: 20px;
    box-sizing: border-box;
    height: 100vh;
}

.content {
    text-align: left;
    color: #e3f2fd;
}

.content h2 {
    font-size: 2em;
    margin: 0;
}

.content p {
    font-size: 1em;
    margin: 10px 0;
}

.know-more {
    display: inline-block;
    margin-top: 20px;
    padding: 10px 20px;
    background-color: #333;
    color: white;
    text-decoration: none;
    border-radius: 5px;
}

#slide1 .know-more {
    background-color: #254336;
}

#slide1 .know-more:hover {
    background-color: #71cda5;
}

#slide2 .know-more {
    background-color: #402E7A;
}

#slide2 .know-more:hover {
    background-color: #8a6fe3;
}

#slide3 .know-more {
    background-color: #946e47;
}

#slide3 .know-more:hover {
    background-color: #9b540d;
}

#slide3 .content {
    color: #4a4747;
} 

.slide img {
    width: 100%;
    height: auto;
    max-width: 500px;
    border-radius: 10px;
}

.owl-nav {
    position: absolute;
    top: 50%;
    width: 100%;
    display: flex;
    justify-content: space-between;
    transform: translateY(-50%);
}

.owl-nav button {
    background-color: rgba(0, 0, 0, 0.5);
    border: none;
    color: white;
    padding: 10px;
    cursor: pointer;
    border-radius: 50%;
}

.owl-nav button.owl-prev {
    position: absolute;
    left: 2px;
    /* Increased padding from content */
}

.owl-nav button.owl-next {
    position: absolute;
    right: 20px;
}

.owl-dots {
    text-align: center;
    padding: 20px;
    position: absolute;
    bottom: 20px;
    width: 100%;
}

.owl-dot {
    height: 15px;
    width: 15px;
    margin: 0 5px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    cursor: pointer;
    transition: background-color 0.6s ease;
}

.owl-dot.active,
.owl-dot:hover {
    background-color: #717171;
}

@media (max-width: 768px) {
    .slide {
        display: block;
        text-align: center;
        padding: 0;
    }

    .content {
        text-align: center;
        padding: 20px;
    }

    .slide img {
        width: 100%;
        height: auto;
        max-width: 100%;
        border-radius: 0;
    }

    .owl-nav button {
        display: none;
    }
}

